--- a/card.html
+++ b/card.html
@@ -12,8 +12,10 @@
                 <h3>July 2022</h3>
                 <h1>Rome, Italy</h1>
             </div>
-            <button class="first">ROME</button>
-            <button class="second">View Trip</button>
+            <div class="button_container">
+                <button class="first">ROME</button>
+                <button class="second">View Trip</button>
+            </div>
         </div>
     </body>
 </html>
